[tool.poetry]
name = "nexus-flow"
version = "0.1.0"
description = ""
authors = ["kirin <kirin.chen1001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pygithub = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
